# perceptron

./: CMakeLists.txt  README.md
CMakeModules/: FindOpenCL.cmake
src/: exception.hpp  main.cpp  perceptron.hpp  perceptron_layer.cl  perceptron_layer.hpp
